--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Name's Portefolio</title>
+    <title>Acerca</title>
 </head>
 <body>
     <header>
@@ -16,8 +16,6 @@
         <a href="work.html" target="_self"> Work </a>
         <a href="contact.html" target="_self"> Contact </a>
     </nav>
-    <a href="projects/project.html" target="_self"> Projetos</a>
 
-    <p>cat, this is a cat</p>
 </body>
 </html>
