--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,13 @@
         <a href="work.html" target="_self"> Work </a>
         <a href="contact.html" target="_self"> Contact </a>
     </nav>
-
+    <address>
+        <p>Nuttelandia</p>
+        <p></p>
+        <p>Rua da Nutella</p>
+        <p>2564-311, Nuttelandia - Portugal</p>
+        <a>Telefone <a href="tel:+351999999999">(+351) 999999999</a></p>
+        <p>E-mail <a href="mailto:nuta@gma.pt">nuta@gma.pt</a></p>
+      </address>
 </body>
 </html>
