--- a/projects/project.html
+++ b/projects/project.html
@@ -16,5 +16,9 @@
         <a href="../work.html" target="_self"> Work </a>
         <a href="../contact.html" target="_self"> Contact </a>
     </nav>
+        <h2> No works here
+            <br>
+            I'm sad :C
+        </h2>
 </body>
 </html>
