--- a/about.html
+++ b/about.html
@@ -7,15 +7,21 @@
 </head>
 <body>
     <header>
-        <h1>Im a cat ᓚᘏᗢ</h1>
+        <h1>Want some Nuts in Nuttelandia?</h1>
     </header>
-    
     <nav>
         <a href="index.html" target="_self"> Página Inicial </a>
         <a href="about.html" target="_self"> About </a>
         <a href="work.html" target="_self"> Work </a>
         <a href="contact.html" target="_self"> Contact </a>
     </nav>
-
+    <br>
+    <p>
+        A Nutella desde cedo sempre foi um aperitivo delicioso
+        devido às incriveis avelãs que são usadas.
+    </p>
+    <p>
+        O seu cacau também é de outro mundo:l 
+    </p>
 </body>
 </html>
