--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html" target="_self"> Página Inicial </a>
         <a href="about.html" target="_self"> About </a>
         <a href="work.html" target="_self"> Work </a>
-        <a href="contact.html" target="_self"> Contact </a>
+        <a href="contact.html" target="_self"> Contatos </a>
     </nav>
     <a href="projects/project.html" target="_self"> Projetos</a>
 
