--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Want some Nuts in Nuttelandia?</h1>
+        <h1>Gato Maria</h1>
     </header>
     <nav>
         <a href="index.html" target="_self"> Página Inicial </a>
@@ -17,10 +17,11 @@
     </nav>
     <br>
     <p>
-        A Nutella desde cedo sempre foi um aperitivo delicioso
-        devido às incriveis avelãs que são usadas.
+       Sou um gato trabalhador que adora recriar a
+       beleza dos outros gatinhos do meu mundo.
     </p>
     <p>
+        Támbem gosto bastante de nutella
         O seu cacau também é de outro mundo:l 
     </p>
 </body>
