--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Im a cat ᓚᘏᗢ</h1>
+        <h1>Im a working cat ᓚᘏᗢ</h1>
     </header>
     
     <nav>
@@ -16,6 +16,11 @@
         <a href="work.html" target="_self"> Work </a>
         <a href="contact.html" target="_self"> Contact </a>
     </nav>
-
+    <p>
+        Os meows trabalhos feitos pelas meowas próprias patinhas
+    </p>
+    <a href="projects/project.html" target="_self"> Projetos</a>
+    <p>Este trabalho é o que me deu mais meowça. Meow!
+    </p>
 </body>
 </html>
