--- a/about.html
+++ b/about.html
@@ -8,21 +8,35 @@
 <body>
     <header>
         <h1>Gato Maria</h1>
+        <nav>
+                <a href="index.html" target="_self"> Home </a>
+                <a href="about.html" target="_self"> About </a>
+                <a href="work.html" target="_self"> Work </a>
+                <a href="contact.html" target="_self"> Contact </a>
+        </nav>
     </header>
-    <nav>
-        <a href="index.html" target="_self"> Página Inicial </a>
-        <a href="about.html" target="_self"> About </a>
-        <a href="work.html" target="_self"> Work </a>
-        <a href="contact.html" target="_self"> Contact </a>
-    </nav>
+    <hr>
+    <main>
     <br>
-    <p>
-       Sou um gato trabalhador que adora recriar a
-       beleza dos outros gatinhos do meu mundo.
-    </p>
-    <p>
-        Támbem gosto bastante de nutella
-        O seu cacau também é de outro mundo:l 
-    </p>
+        <p>
+            Sou um gato trabalhador que adora recriar a
+            beleza dos outros gatinhos do meu mundo.
+        </p>
+        <p>
+            Támbem gosto bastante de nutella
+            O seu cacau também é de outro mundo:l 
+        </p>
+        <h2> Here's a subtitle</h2>
+        <p> There's a lack of contect here! </p>
+    </main>
+
+    <footer>
+        <p>
+            The information and works on this website are by the author --
+        </p>
+        <p>
+            All rights reserved. 2024
+        </p>
+    </footer>
 </body>
 </html>
