--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,30 @@
 <body>
     <header>
         <h1>Im a cat ᓚᘏᗢ</h1>
+        <nav>
+                <a href="index.html" target="_self"> Home </a>
+                <a href="about.html" target="_self"> About </a>
+                <a href="work.html" target="_self"> Work </a>
+                <a href="contact.html" target="_self"> Contact </a>
+        </nav>
     </header>
     
-    <nav>
-        <a href="index.html" target="_self"> Página Inicial </a>
-        <a href="about.html" target="_self"> About </a>
-        <a href="work.html" target="_self"> Work </a>
-        <a href="contact.html" target="_self"> Contact </a>
-    </nav>
-    <address>
-        <p>Nuttelandia</p>
-        <p></p>
-        <p>Rua da Nutella</p>
-        <p>2564-311, Nuttelandia - Portugal</p>
-        <a>Telefone <a href="tel:+351999999999">(+351) 999999999</a></p>
-        <p>E-mail <a href="mailto:nuta@gma.pt">nuta@gma.pt</a></p>
-      </address>
+    <main>
+        <address>
+            <p>Pombal, Louriçal</p>
+            <p></p>
+            <p>Rua da Carvalheira</p>
+            <p>3105-160, Pombal - Portugal</p>
+            <a>Telefone <a href="tel:+3519--------">(+351) 913------</a></p>
+            <p>E-mail <a href="mailto:marimarigrigri@gmail.com">marimarigrigri@gmail.com</a></p>
+        </address>
+    </main>
+
+    <footer>
+        <p>The information and works on this website are by the author --</p>
+        <p>
+        All rights reserved. 2024
+        </p>
+    </footer>
 </body>
 </html>
