--- a/work.html
+++ b/work.html
@@ -3,24 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LP2</title>
+    <title>Trabalhos</title>
+    <link rel="stylesheet" href="css/au.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Im a working cat ᓚᘏᗢ</h1>
+        <nav>
+                <a href="index.html" target="_self"> Home </a>
+                <a href="about.html" target="_self"> About </a>
+                <a href="work.html" target="_self"> Work </a>
+                <a href="contact.html" target="_self"> Contact </a>
+        </nav>
     </header>
-    
-    <nav>
-        <a href="index.html" target="_self"> Página Inicial </a>
-        <a href="about.html" target="_self"> About </a>
-        <a href="work.html" target="_self"> Work </a>
-        <a href="contact.html" target="_self"> Contact </a>
-    </nav>
-    <p>
-        Os meows trabalhos feitos pelas meowas próprias patinhas
-    </p>
-    <a href="projects/project.html" target="_self"> Projetos</a>
-    <p>Este trabalho é o que me deu mais meowça. Meow!
-    </p>
+    <hr>
+    <main>
+        <p>
+            Os meows trabalhos feitos pelas meowas próprias patinhas
+        </p>
+        <a href="projects/P1/project1.html" target="_self">
+            <article>
+                <figure>
+                    <figcaption>
+                        <h3> Projeto Chunky CAT</h3>
+                    </figcaption>
+                    <img src="projects/P1/Images/chunky.jpeg" alt="Imagem do projeto" width="25%"/>
+                    <footer>
+                    
+                    </footer>
+                </figure>
+            </article>
+        </a>
+    </main>
+
+    <footer>
+        <p>The information and works on this website are by the author --</p>
+        <p>
+        All rights reserved. 2024
+        </p>
+    </footer>
+
 </body>
 </html>
