--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Im a working cat ᓚᘏᗢ</h1>
+        <h1 class="h1">Im a working cat ᓚᘏᗢ</h1>
         <nav>
                 <a href="index.html" target="_self"> Home </a>
                 <a href="about.html" target="_self"> About </a>
