--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 class="h1">Im a working cat ᓚᘏᗢ</h1>
+        <h1 class="h1">Trabalhos</h1>
         <nav>
                 <a href="index.html" target="_self"> Home </a>
                 <a href="about.html" target="_self"> About </a>
@@ -28,11 +28,24 @@
             <article>
                 <figure>
                     <figcaption>
-                        <h3> Projeto Chunky CAT</h3>
+                        <h3> Projetos Chunky Cat</h3>
                     </figcaption>
-                    <img src="projects/P1/Images/chunky.jpeg" alt="Imagem do projeto" width="25%"/>
+                    <img src="projects/P1/Images/chunky.jpeg" alt="Imagem do projeto" height="15%" width="15%"/>
                     <footer>
                     
+                    </footer>
+                </figure>
+            </article>
+        </a>
+        <a href="projects/P2/project2.html" tagert="_self">
+            <article>
+                <figure>
+                    <figcaption>
+                        <h3> Projetos 3D </h3>
+                    </figcaption>
+                    <img src="projects/P1/Images/chunky.jpeg" alt="Imagem do projeto 2" height="15%" width="15%"/>
+                    <footer>
+
                     </footer>
                 </figure>
             </article>
