--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contatos</title>
+    <title>Contactos</title>
 </head>
 <body>
     <header>
-        <h1>Im a cat ᓚᘏᗢ</h1>
+        <h1>Os meus contactos</h1>
         <nav>
-                <a href="index.html" target="_self"> Home </a>
-                <a href="about.html" target="_self"> About </a>
-                <a href="work.html" target="_self"> Work </a>
-                <a href="contact.html" target="_self"> Contact </a>
+                <a href="index.html" target="_self"> Página Inicial </a>
+                <a href="about.html" target="_self"> Acerca </a>
+                <a href="work.html" target="_self"> Trabalhos </a>
+                <a href="contact.html" target="_self"> Contactos </a>
         </nav>
     </header>
     
@@ -23,15 +23,13 @@
             <p>Rua da Carvalheira</p>
             <p>3105-160, Pombal - Portugal</p>
             <a>Telefone <a href="tel:+3519--------">(+351) 913------</a></p>
-            <p>E-mail <a href="mailto:marimarigrigri@gmail.com">marimarigrigri@gmail.com</a></p>
+            <p>E-mail <a href="mailto:mysweethotcoffee@gmail.com">mysweethotcoffee@gmail.com</a></p>
         </address>
     </main>
 
     <footer>
         <p>The information and works on this website are by the author --</p>
-        <p>
-        All rights reserved. 2024
-        </p>
+        <p>All rights reserved. 2024</p>
     </footer>
 </body>
 </html>
