--- a/work.html
+++ b/work.html
@@ -13,10 +13,10 @@
     <header>
         <h1 class="h1">Trabalhos</h1>
         <nav>
-                <a href="index.html" target="_self"> Home </a>
-                <a href="about.html" target="_self"> About </a>
-                <a href="work.html" target="_self"> Work </a>
-                <a href="contact.html" target="_self"> Contact </a>
+                <a href="index.html" target="_self"> Página Inicial </a>
+                <a href="about.html" target="_self"> Acerca </a>
+                <a href="work.html" target="_self"> Trabalhos </a>
+                <a href="contact.html" target="_self"> Contactos </a>
         </nav>
     </header>
     <hr>
@@ -24,26 +24,26 @@
         <p>
             Os meows trabalhos feitos pelas meowas próprias patinhas
         </p>
-        <a href="projects/P1/project1.html" target="_self">
+        <a href="typeprojects/projchunkycat/project1.html" target="_self">
             <article>
                 <figure>
                     <figcaption>
                         <h3> Projetos Chunky Cat</h3>
                     </figcaption>
-                    <img src="projects/P1/Images/chunky.jpeg" alt="Imagem do projeto" height="15%" width="15%"/>
+                    <img src="typeprojects/projchunkycat/Images/chunky.jpeg" alt="Imagem do projeto" height="15%" width="15%"/>
                     <footer>
                     
                     </footer>
                 </figure>
             </article>
         </a>
-        <a href="projects/P2/project2.html" tagert="_self">
+        <a href="typeprojects/proj3d/project2.html" tagert="_self">
             <article>
                 <figure>
                     <figcaption>
                         <h3> Projetos 3D </h3>
                     </figcaption>
-                    <img src="projects/P1/Images/chunky.jpeg" alt="Imagem do projeto 2" height="15%" width="15%"/>
+                    <img src="typeprojects/proj3d/Images/bixo.jpg" alt="Imagem do projeto 2" height="15%" width="15%"/>
                     <footer>
 
                     </footer>
