--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </header>
     
     <nav>
-        <a href="index.html" target="_self"> Home </a>
-        <a href="about.html" target="_self"> About </a>
-        <a href="work.html" target="_self"> Work </a>
-        <a href="contact.html" target="_self"> Contatos </a>
+        <a href="index.html" target="_self"> Página Inicial </a>
+        <a href="about.html" target="_self"> Acerca </a>
+        <a href="work.html" target="_self"> Trabalhos </a>
+        <a href="contact.html" target="_self"> Contactos </a>
     </nav>
 
     <br>
