--- a/typeprojects/projchunkycat/project1.html
+++ b/typeprojects/projchunkycat/project1.html
@@ -9,10 +9,10 @@
     <header>
         <h1>Projeto Name 1</h1>
         <nav>
-                <a href="../../index.html" target="_self"> Home </a>
-                <a href="../../about.html" target="_self"> About </a>
-                <a href="../../work.html" target="_self"> Work </a>
-                <a href="../../contact.html" target="_self"> Contact </a>
+                <a href="../../index.html" target="_self"> Página Inicial </a>
+                <a href="../../about.html" target="_self"> Acerca </a>
+                <a href="../../work.html" target="_self"> Trabalhos </a>
+                <a href="../../contact.html" target="_self"> Contactos </a>
         </nav>
     </header>
     <hr>
