--- a/about.html
+++ b/about.html
@@ -6,8 +6,16 @@
     <title>Acerca</title>
 </head>
 <body>
+
+    <!-- O header está a ser usada para representar quais informações
+        ficam no cabeçalho -->
+
     <header>
         <h1>Acerca de Mim</h1>
+
+        <!-- A nav está a ser usada como placeholder das interligações
+            de páginas principais dentro do website -->
+
         <nav>
                 <a href="index.html" target="_self"> Página Inicial </a>
                 <a href="about.html" target="_self"> Acerca </a>
@@ -16,6 +24,10 @@
         </nav>
     </header>
     <hr>
+
+    <!-- O main está a ser usada para representar quais informações
+        são as principais-->
+
     <main>
     <br>
         <p>
@@ -29,6 +41,9 @@
         <h2> Here's a subtitle</h2>
         <p> There's a lack of contect here! </p>
     </main>
+
+    <!-- O footer está a ser usado para representar quais informações
+        são as que ficam no rodapé-->
 
     <footer>
         <p>
