--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,16 @@
     <title>Contactos</title>
 </head>
 <body>
+
+    <!-- O header está a ser usada para representar quais informações
+        ficam no cabeçalho -->
+        
     <header>
         <h1>Os meus contactos</h1>
+
+        <!-- A nav está a ser usada como placeholder das interligações
+            de páginas principais dentro do website -->
+
         <nav>
                 <a href="index.html" target="_self"> Página Inicial </a>
                 <a href="about.html" target="_self"> Acerca </a>
@@ -15,7 +23,10 @@
                 <a href="contact.html" target="_self"> Contactos </a>
         </nav>
     </header>
-    
+
+    <!-- O main está a ser usada para representar quais informações
+        são as principais-->
+
     <main>
         <address>
             <p>Pombal, Louriçal</p>
@@ -26,6 +37,9 @@
             <p>E-mail <a href="mailto:mysweethotcoffee@gmail.com">mysweethotcoffee@gmail.com</a></p>
         </address>
     </main>
+
+    <!-- O footer está a ser usado para representar quais informações
+        são as que ficam no rodapé-->
 
     <footer>
         <p>The information and works on this website are by the author --</p>
