--- a/index.html
+++ b/index.html
@@ -6,23 +6,36 @@
     <title>Maria's Portefolio</title>
 </head>
 <body>
+
+    <!-- O header está a ser usada para representar quais informações
+        ficam no cabeçalho -->
+
     <header>
         <h1>Portefólio</h1>
+    
+        <!-- A nav está a ser usada como placeholder das interligações
+            de páginas principais dentro do website -->
+
+        <nav>
+            <a href="index.html" target="_self"> Página Inicial </a>
+            <a href="about.html" target="_self"> Acerca </a>
+            <a href="work.html" target="_self"> Trabalhos </a>
+            <a href="contact.html" target="_self"> Contactos </a>
+        </nav>
     </header>
     
-    <nav>
-        <a href="index.html" target="_self"> Página Inicial </a>
-        <a href="about.html" target="_self"> Acerca </a>
-        <a href="work.html" target="_self"> Trabalhos </a>
-        <a href="contact.html" target="_self"> Contactos </a>
-    </nav>
-
     <br>
+
+    <!-- O main está a ser usada para representar quais informações
+        são as principais-->
 
     <main>
         <h2> Here's a subtitle</h2>
         <p> There's a lack of contect here! </p>
     </main>
+
+    <!-- O footer está a ser usado para representar quais informações
+        são as que ficam no rodapé-->
 
     <footer>
         <p>The information and works on this website are by the author --</p>
