--- a/work.html
+++ b/work.html
@@ -10,8 +10,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!-- O header está a ser usada para representar quais informações
+        ficam no cabeçalho -->
+        
     <header>
         <h1 class="h1">Trabalhos</h1>
+
+        <!-- A nav está a ser usada como placeholder das interligações
+            de páginas principais dentro do website -->
+
         <nav>
                 <a href="index.html" target="_self"> Página Inicial </a>
                 <a href="about.html" target="_self"> Acerca </a>
@@ -20,6 +28,10 @@
         </nav>
     </header>
     <hr>
+
+    <!-- O main está a ser usada para representar quais informações
+        são as principais-->
+
     <main>
         <p>
             Os meows trabalhos feitos pelas meowas próprias patinhas
@@ -51,6 +63,9 @@
             </article>
         </a>
     </main>
+
+    <!-- O footer está a ser usado para representar quais informações
+        são as que ficam no rodapé-->
 
     <footer>
         <p>The information and works on this website are by the author --</p>
