--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
         ficam no cabeçalho -->
         
     <header>
-        <h1 class="h1">Trabalhos</h1>
+        <h1>Trabalhos</h1>
 
         <!-- A nav está a ser usada como placeholder das interligações
             de páginas principais dentro do website -->
