update divs test
atualização nos blocos dos projetos para teste

--- a/work.html
+++ b/work.html
@@ -36,32 +36,38 @@
         <p>
             Os meows trabalhos feitos pelas meowas próprias patinhas
         </p>
-        <a href="typeprojects/projchunkycat/project1.html" target="_self">
-            <article>
-                <figure>
-                    <figcaption>
-                        <h3> Projetos Chunky Cat</h3>
-                    </figcaption>
-                    <img src="typeprojects/projchunkycat/Images/chunky.jpeg" alt="Imagem do projeto" height="15%" width="15%"/>
-                    <footer>
-                    
-                    </footer>
-                </figure>
-            </article>
-        </a>
-        <a href="typeprojects/proj3d/project2.html" tagert="_self">
-            <article>
-                <figure>
-                    <figcaption>
-                        <h3> Projetos 3D </h3>
-                    </figcaption>
-                    <img src="typeprojects/proj3d/Images/bixo.jpg" alt="Imagem do projeto 2" height="15%" width="15%"/>
-                    <footer>
-
-                    </footer>
-                </figure>
-            </article>
-        </a>
+        <!-- <div id="block_container"> -->
+        <div id="block1">
+            <a href="typeprojects/projchunkycat/project1.html" target="_self">
+                <article>
+                    <figure>
+                        <figcaption>
+                            <h3> Projetos Chunky Cat</h3>
+                        </figcaption>
+                        <img src="typeprojects/projchunkycat/Images/chunky.jpeg" alt="Imagem do projeto" height="70%" width="100%"/>
+                    </figure>
+                </article>
+            </a>
+            <footer>
+                aaa
+            </footer>
+        </div>
+        <div id="block2">
+            <a href="typeprojects/proj3d/project2.html" tagert="_self">
+                <article>
+                    <figure>
+                        <figcaption>
+                            <h3> Projetos 3D </h3>
+                        </figcaption>
+                        <img src="typeprojects/proj3d/Images/bixo.jpg" alt="Imagem do projeto 2" height="70%" width="100%"/>
+                    </figure>
+                </article>
+            </a>
+            <footer>
+                aaa
+            </footer>
+        </div>
+        <!-- </div> -->
     </main>
 
     <!-- O footer está a ser usado para representar quais informações
