--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <br>
 
     <!-- O main está a ser usada para representar quais informações
-        são as principais-->
+        são as principais -->
 
     <main>
         <h2> Here's a subtitle</h2>
@@ -39,9 +39,7 @@
 
     <footer>
         <p>The information and works on this website are by the author --</p>
-        <p>
-        All rights reserved. 2024
-        </p>
+        <p>All rights reserved. 2024</p>
     </footer>
 </body>
 </html>
